k8s/deploy_app_crud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-crud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-crud
  template:
    metadata:
      labels:
        app: app-crud
    spec:
      containers:
      - name: app-crud
        image: docker.io/puzle/app_crud:v3
        ports:
        - containerPort: 8000
