k8s/service_app_crud.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-crud
spec:
  selector:
    app: app-crud
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
